# ProyectoTallerI

./: CMakeLists.txt  EFK_GEOS3.cpp  EKF_test.cpp  README.md  practica3_ampliacion1.ipynb
Rpoly/Rpoly/: quartic.c  rpoly.cpp
Rpoly/__MACOSX/: ._Rpoly
Rpoly/__MACOSX/Rpoly/: ._quartic.c  ._rpoly.c  ._rpoly.h  ._yo
include/: Accel.h  AccelHarmonic.h  AccelPointMass.h  AzElPa.h  Cheb3D.h  DEInteg.h  EccAnom.h  EqnEquinox.h  Frac.h  GHAMatrix.h  G_AccelHarmonic.h  Geodetic.h  IERS.h  JPL_Eph_DE430.h  LTC.h  Legendre.h  Matrix.cpp  Matrix.h  MeanObliquity.h  MeasUpdate.h  Mjday.h  Mjday_TDB.h  NutAngles.h  NutMatrix.h  PoleMatrix.h  Position.h  PrecMatrix.h  R_x.h  R_y.h  R_z.h  Sat_const.h  TimeUpdate.h  VarEqn.h  angl.h  anglesdr.h  anglesg.h  doubler.h  elements.h  gast.h  gibbs.h  (+6 more)
src/: Accel.cpp  Accel.h  AccelHarmonic.cpp  AccelHarmonic.h  AccelPointMass.cpp  AccelPointMass.h  AzEIPa.cpp  AzEIPa.h  AzElPa.cpp  Cheb3D.cpp  Cheb3D.h  DEInteg.cpp  DEInteg.h  EFK_GEOS3.cpp  EFK_GEOS3.h  EccAnom.cpp  EccAnom.h  EqnEquinox.cpp  EqnEquinox.h  Frac.cpp  Frac.h  GHAMatrix.cpp  GHAMatrix.h  G_AccelHarmonic.cpp  G_AccelHarmonic.h  Geodetic.cpp  Geodetic.h  IERS.cpp  IERS.h  JPL_Eph_DE430.cpp  JPL_Eph_DE430.h  LTC.cpp  LTC.h  Legendre.cpp  Legendre.h  Matrix.cpp  MeanObliquity.cpp  MeanObliquity.h  MeasUpdate.cpp  MeasUpdate.h  (+52 more)
