cmake_minimum_required(VERSION 3.28)
project(ProyectoTallerI)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(src)

add_executable(ProyectoTallerI
        include/Frac.h
        include/Matrix.h
        include/Mjday.h
        include/R_x.h
        include/R_y.h
        include/R_z.h
        include/Sat_const.h
        src/Accel.cpp
        src/Accel.h
        src/AccelHarmonic.cpp
        include/AccelHarmonic.h
        src/AccelPointMass.cpp
        src/AccelPointMass.h
        src/angl.cpp
        src/angl.h
        src/anglesdr.cpp
        src/anglesdr.h
        src/anglesg.cpp
        src/anglesg.h
        src/AzEIPa.cpp
        src/AzEIPa.h
        src/Cheb3D.cpp
        src/Cheb3D.h
        src/DEInteg.cpp
        src/DEInteg.h
        src/doubler.cpp
        src/doubler.h
        src/EccAnom.cpp
        src/EccAnom.h
        src/EFK_GEOS3.cpp
        src/EFK_GEOS3.h
        src/elements.cpp
        src/elements.h
        src/EqnEquinox.cpp
        src/EqnEquinox.h
        src/Frac.cpp
        src/G_AccelHarmonic.cpp
        src/G_AccelHarmonic.h
        src/gast.cpp
        src/gast.h
        src/Geodetic.cpp
        src/Geodetic.h
        src/GHAMatrix.cpp
        src/GHAMatrix.h
        src/gibbs.cpp
        src/gibbs.h
        src/gmst.cpp
        include/gmst.h
        src/hgibbs.cpp
        src/hgibbs.h
        src/IERS.cpp
        src/IERS.h
        src/JPL_Eph_DE430.cpp
        src/JPL_Eph_DE430.h
        src/Legendre.cpp
        include/Legendre.h
        src/LTC.cpp
        src/LTC.h
        src/Matrix.cpp
        src/MeanObliquity.cpp
        include/MeanObliquity.h
        src/MeasUpdate.cpp
        src/MeasUpdate.h
        src/Mjday.cpp
        src/Mjday_TDB.cpp
        src/Mjday_TDB.h
        src/NutAngles.cpp
        src/NutAngles.h
        src/NutMatrix.cpp
        src/NutMatrix.h
        src/PoleMatrix.cpp
        src/PoleMatrix.h
        src/Position.cpp
        src/Position.h
        src/PrecMatrix.cpp
        src/PrecMatrix.h
        src/R_x.cpp
        src/R_y.cpp
        src/R_z.cpp
        src/sign_.cpp
        src/sign_.h
        src/timediff.cpp
        src/timediff.h
        src/TimeUpdate.cpp
        src/TimeUpdate.h
        src/unit.cpp
        src/unit.h
        src/VarEqn.cpp
        src/VarEqn.h
        EFK_GEOS3.cpp
        EKF_test.cpp
        include/global.h)
