cmake_minimum_required(VERSION 3.28)
project(ProyectoTallerI)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(src)

add_executable(ProyectoTallerI
        include/Frac.h
        include/Matrix.h
        include/Mjday.h
        include/R_x.h
        include/R_y.h
        include/R_z.h
        include/Sat_const.h
        src/Accel.cpp
        src/Accel.h
        src/AccelHarmonic.cpp
        include/AccelHarmonic.h
        src/AccelPointMass.cpp
        include/AccelPointMass.h
        src/angl.cpp
        include/angl.h
        src/anglesdr.cpp
        src/anglesdr.h
        src/anglesg.cpp
        src/anglesg.h
        src/AzEIPa.cpp
        src/AzEIPa.h
        src/Cheb3D.cpp
        include/Cheb3D.h
        src/DEInteg.cpp
        src/DEInteg.h
        src/doubler.cpp
        include/doubler.h
        src/EccAnom.cpp
        src/EccAnom.h
        src/elements.cpp
        include/elements.h
        src/EqnEquinox.cpp
        include/EqnEquinox.h
        src/Frac.cpp
        src/G_AccelHarmonic.cpp
        include/G_AccelHarmonic.h
        src/gast.cpp
        include/gast.h
        src/Geodetic.cpp
        include/Geodetic.h
        src/GHAMatrix.cpp
        include/GHAMatrix.h
        src/gibbs.cpp
        include/gibbs.h
        src/gmst.cpp
        include/gmst.h
        src/hgibbs.cpp
        include/hgibbs.h
        src/IERS.cpp
        include/IERS.h
        src/JPL_Eph_DE430.cpp
        include/JPL_Eph_DE430.h
        src/Legendre.cpp
        include/Legendre.h
        src/LTC.cpp
        include/LTC.h
        src/Matrix.cpp
        src/MeanObliquity.cpp
        include/MeanObliquity.h
        src/MeasUpdate.cpp
        include/MeasUpdate.h
        src/Mjday.cpp
        src/Mjday_TDB.cpp
        include/Mjday_TDB.h
        src/NutAngles.cpp
        src/NutAngles.h
        src/NutMatrix.cpp
        src/NutMatrix.h
        src/PoleMatrix.cpp
        include/PoleMatrix.h
        src/Position.cpp
        include/Position.h
        src/PrecMatrix.cpp
        include/PrecMatrix.h
        src/R_x.cpp
        src/R_y.cpp
        src/R_z.cpp
        src/sign_.cpp
        include/sign_.h
        src/timediff.cpp
        include/timediff.h
        src/TimeUpdate.cpp
        include/TimeUpdate.h
        src/unit.cpp
        include/unit.h
        src/VarEqn.cpp
        src/VarEqn.h
        EFK_GEOS3.cpp
        EKF_test.cpp
        include/global.h
        src/global.cpp)
